# GreenRisk

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  MASTER_PLAN.md  README.md  inspect_corpus.py  linguistic_variables.py  main.py  models.py  plot_linguistic_variables.py  pyproject.toml  rule_base.py  sanity_check_distributions.py  smoke_test_all_models.py  smoke_test_detector_model.py  smoke_test_provenance.py  w1_finalize_models.py  w1_first_provenance.py
artifacts/contrast_run/: contrast_scored.csv  face_validity_stats.json  run_manifest.json
artifacts/corpus_run/: bingler_stats.json  run_manifest.json  tcfd_scored.csv
artifacts/provenance/: contrast_run.json  contrast_run.ttl  corpus_run.json  corpus_run.ttl  first_provenance.json  first_provenance.ttl  phase4_seam_run.ttl
data/: contrast_set.csv
docs/: README.md  acknowledgements.md  architecture.md  validation.md
scripts/: bingler_baseline.py  evaluate_face_validity.py  finalize_models.py  first_provenance.py  inspect_corpus.py  iterate_tcfd.py  pin_models.py  plot_linguistic_variables.py  provenance_contrast_run.py  provenance_corpus_run.py  render_provenance_png.py  run_contrast_set.py  run_full_corpus.py  sanity_check_distributions.py  w1_finalize_models.py  w1_first_provenance.py
scripts/validation/: anchor_verify.py  hash3_characterize.py  integration_seam_test.py  mf_experiment.py
tests/: smoke_test_all_models.py  smoke_test_detector_model.py  smoke_test_provenance.py
