[project]
name = "greenrisk"
version = "0.1.0"
description = "Fuzzy multi-dimensional greenwashing risk scoring pipeline"
authors = [
    { name = "Isaac D'Césares", email = "isaac.dcesares@ufrj.br" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "graphviz>=0.21",
    "huggingface-hub>=1.13.0",
    "jupyterlab>=4.5.7",
    "lxml>=5.0.0",
    "prov>=2.1.1",
    "pydot>=4.0.1",
    "rdflib>=7.6.0",
    "torch>=2.11.0",
    "transformers>=5.7.0",
]
