[project]
name = "greenrisk"
version = "0.1.0"
description = "Fuzzy multi-dimensional greenwashing risk scoring pipeline"
authors = [
    { name = "Isaac D'Césares", email = "isaac.dcesares@ufrj.br" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "graphviz>=0.21",
    "huggingface-hub>=1.13.0",
    "jupyterlab>=4.5.7",
    "lxml>=5.0.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "prov>=2.1.1",
    "pydot>=4.0.1",
    "python-dotenv>=1.2.2",
    "rdflib>=7.6.0",
    "scikit-fuzzy>=0.5.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "transformers>=5.7.0",
]

[project.urls]
Homepage = "https://github.com/idcesares/GreenRisk"
Repository = "https://github.com/idcesares/GreenRisk"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
